--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link id="s1" rel="stylesheet" href="./src/style1.css">
     <link id="s2" rel="stylesheet" href="./src/style2.css" disabled=true>
 </head>
-<body>
+<body background="bg">
     <div id="main">
         <header>
                 <nav>
